afc: Add more debug when initialisation fails

https://bugzilla.gnome.org/show_bug.cgi?id=767399